# cog

./: Cargo.toml  README.md
cog_cli/: Cargo.toml
cog_cli/src/: cli.rs  config.rs  errors.rs  main.rs
cog_core/: Cargo.toml
cog_core/src/: lib.rs
cog_core/src/check/: errors.rs
cog_core/src/codegen/: errors.rs  mod.rs
cog_core/src/codegen/core/: expr.rs  mod.rs  types.rs
cog_core/src/codegen/impls/: funcs.rs
cog_parser/: Cargo.toml
cog_parser/src/parser/: errors.rs  mod.rs
cog_parser/src/parser/core/: expr.rs  ops.rs  token.rs  types.rs
cog_parser/src/parser/impls/: bin_ops.rs  funcs.rs  if_else.rs  mod.rs  ops.rs  parse.rs  pointer_ops.rs  primary.rs  types.rs  vars.rs
cog_parser/tests/: assign_exprs.rs  binary_exprs.rs  func_exprs.rs  if_exprs.rs  math_exprs.rs
example/: Cog.toml
example/src/: main.cog
nht_cli/: Cargo.toml
nht_parser/: Cargo.toml
nht_parser/src/parser/: errors.rs  expr.rs  mod.rs  nodes.rs  token.rs  types.rs
nht_parser/src/parser/core/: mod.rs  token.rs
nht_parser/tests/: assign_exprs.rs  binary_exprs.rs  if_exprs.rs  math_exprs.rs
